@@ -1,7 +1,14 @@
+2004-03-16  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c,
+	  src/munged/cred.c: Added dead store removal protection (ie, memburn).
+
+	* src/munge/read.c(read_data_from_file): Removed unnecessary memset().
+
 2004-03-12  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/dec_v1.c, src/munged/enc_v1.c, src/munged/zip.c:
-	  Fixed gcc 3.3.3 (Debian 20040306) compiler warnings with "-O2".
+	  Fixed gcc 3.3.3 (Debian 20040306) compiler warnings under "-O2".
 
 	* configure.ac, config/x_ac_reentrant.m4, src/munged/Makefile.am:
 	  Moved _REENTRANT to top-level "config.h".
